# ip-orch

./: README.md  pyproject.toml  to-do
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
base_lib/: setup.py
base_lib/mlip/: __init__.py
base_lib/mlip.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: calculators_test.py
ip_orch/: model_factory.py
ip_orch/cli/: __init__.py  commands.py  env_utils.py  helpers.py  main.py  repo_map.py
ip_orch/config/: config_store.py
ip_orch/core/: energy_correction.py  model_factory.py
materials_project/dft/: mp_surfaces_energy_dft_mp-1.npy  mp_surfaces_energy_dft_mp-10018.npy  mp_surfaces_energy_dft_mp-10021.npy  mp_surfaces_energy_dft_mp-1008634.npy  mp_surfaces_energy_dft_mp-101.npy  mp_surfaces_energy_dft_mp-10157.npy  mp_surfaces_energy_dft_mp-10172.npy  mp_surfaces_energy_dft_mp-10173.npy  mp_surfaces_energy_dft_mp-102.npy  mp_surfaces_energy_dft_mp-10257.npy  mp_surfaces_energy_dft_mp-103.npy  mp_surfaces_energy_dft_mp-104.npy  mp_surfaces_energy_dft_mp-10658.npy  mp_surfaces_energy_dft_mp-10659.npy  mp_surfaces_energy_dft_mp-11.npy  mp_surfaces_energy_dft_mp-110.npy  mp_surfaces_energy_dft_mp-112.npy  mp_surfaces_energy_dft_mp-113.npy  mp_surfaces_energy_dft_mp-11334.npy  mp_surfaces_energy_dft_mp-11698.npy  mp_surfaces_energy_dft_mp-117.npy  mp_surfaces_energy_dft_mp-122.npy  (+116 more)
mlip_lib/: 1_prepare.py  2_inference.py  3_plots.py  calculator.py  config.py  orchestrator.py  rodar_comparacao.py
multi_calc/: calcular_atomizacao.py
paper/: joss.md  references.bib
tests/: test_energy_correction.py
(+580 files in other folders)
